mpeg2dec: refactor cropping code to use libgstvideo functions

https://bugzilla.gnome.org/show_bug.cgi?id=571146